--- a/WebApplication1/bin/WebApplication1.dll.config
+++ b/WebApplication1/bin/WebApplication1.dll.config
@@ -4,20 +4,11 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  <!--
-    Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
-
-    Los siguientes atributos se pueden establecer en la etiqueta <httpRuntime>.
-      <system.Web>
-        <httpRuntime targetFramework="4.5" />
-      </system.Web>
-  -->
   <connectionStrings>
-    <add name="hads14ConnectionString" connectionString="Data Source=asierae.database.windows.net;Initial Catalog=hads14;Persist Security Info=True;User ID=hads;Password=$uperPass13"
-      providerName="System.Data.SqlClient" />
+    <add name="hads14ConnectionString" connectionString="Data Source=asierae.database.windows.net;Initial Catalog=hads14;Persist Security Info=True;User ID=hads;Password=$uperPass13" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
-    <compilation debug="true" strict="false" explicit="true" targetFramework="4.5"/>
+    <compilation debug="true" strict="false" explicit="true" targetFramework="4.0"/>
     <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
 </configuration>
